syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "CqrsProject.App.GrpcServer.Methods.V1.Me";

package cqrsproject.app.grpcserver.methods.v1.me;

service MeService {
  rpc SyncUser(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc ListTenants(google.protobuf.Empty) returns (stream MeTenantReply);
}

message MeTenantReply {
  string id = 1;
  string tenant_name = 2;
}
